--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ main {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 44vw;
+    overflow: auto;
 }
 
 .card-header {
@@ -124,6 +125,7 @@ main {
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    overflow: auto;
 }
 
 .stats {
@@ -171,6 +173,7 @@ main {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     line-height: 30px;
+    overflow: auto;
 }
 
 #line_top_x {
@@ -189,6 +192,7 @@ main {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     line-height: 30px;
+    overflow: auto;
 }
 
 /* Progress Bars */
@@ -210,7 +214,7 @@ main {
     width: 300px;
     background: #e5e5e5;
     border-radius: 4px;
-    overflow: hidden;
+    overflow: auto;
     position: relative;
 }
 
@@ -255,6 +259,7 @@ main {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     line-height: 30px;
+    overflow: auto;
 }
 
 /* Pie Chart */
