--- a/styles.css
+++ b/styles.css
@@ -298,7 +298,7 @@ main {
 
 /* Styles for the popup */
 .popup {
-    /* display: none; */
+    display: none;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -317,7 +317,7 @@ main {
 
 /* Overlay style */
 .overlay {
-    /* display: none; */
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
